--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "axios": "^0.19.0"
+    "bunyan": "^1.8.14",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "jest": "^24.8.0",
